# python-boilerplate

./: .dockerignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/actions/project-environment-setup/: action.yml
.github/workflows/: publish-docker.yml  python-ci-with-poetry.yml  python-ci-with-uv.yml
src/python_boilerplate/: __main__.py
src/python_boilerplate/common/: asynchronization.py  debounce_throttle.py  orm.py  profiling.py  trace.py
src/python_boilerplate/configuration/: application_configuration.py
src/python_boilerplate/message/: email.py
tests/: conftest.py
tests/test_python_boilerplate/common/: test_common_function.py  test_debounce_throttle.py
tests/test_python_boilerplate/configuration/: test_apscheduler_configuration.py
tests/test_python_boilerplate/demo/: test_arrow_usage.py  test_pandas_usage.py
